Bug 1476301, try to ensure sequential focusing can leave shadow trees, r=mrbkap